--- a/Resources/Private/Templates/Subscribe/SubscribeForm.html
+++ b/Resources/Private/Templates/Subscribe/SubscribeForm.html
@@ -25,6 +25,10 @@
 							partial="Form/FieldTextbox"
 							arguments="{fieldId: 'me-cleverreach-subscribe-email', translationKey: 'user.email', propertyName: 'email', value: '{user.email}'}"/>
 
+					<f:render
+							partial="Form/FieldCheckbox"
+							arguments="{fieldId: 'me-cleverreach-subscribe-privacy-policy', translationKey: 'user.privacyPolicy', propertyName: 'privacyPolicy', value: '{user.privacyPolicy}'}"/>
+
 					<div class="form-group">
 						<div class="col-sm-offset-2 col-sm-10">
 							<button type="submit" class="btn btn-default">
